# socx

./: .env  .gitignore  README.md  pyproject.toml  ruff.toml  uv.toml
.archive/: asm.py  env  formatter.py  inout.py  oldparser.py  settings.local.toml  settings.toml  tomldoc.toml
.github/workflows/: python-app.yml
assets/inputs/: FullSectorsPixieNVM.hex  MCUList.lst  PixieRomOutVerilog.hex
assets/lst/inputs/: SPUList.lst  SpuROM.json  hwsList.lst  hwsNVM.hex  hwsROM.hex  spuNVM.txt
assets/outputs/: MCUList.sv  SPUList.sv  hwsList.sv
assets/parser_out/: GNVM.hex  HwsROM.json  PixieNVM.hex  PixieNvmOutVerilog.hex  PixieOutVerilog.hex  SpuOutNVM.hex  SpuOutROM.hex  SpuRomTable.hex  hwsNVM.txt  hwsROM.txt  memLd.json  spuROM.txt  wiliot.liclipse
assets/rgr/inputs/: rerun_list.cfg
assets/sv_out/: pixie_hws_cgs.sv  pixie_hws_sb_raw.svh
settings/: convert.local.toml  convert.toml  converter.local.toml  converter.toml  filetypes.toml  plugins.toml  validators.toml
src/: lst_to_cov.py
src/covgen/: __init__.py  __main__.py  _config.py  _options.py  cli.py  config.py  console.py  converter.py  memory.py  options.py  parser.py  tokenizer.py  validators.py
src/patches/: post_process_sim_log.py
src/plugins/: __init__.py  config.py  example.py  rgr.py
src/plugins/cli/: roy.py  test.py
src/plugins/convert/: __init__.py  lst.py
src/plugins/run/: __init__.py
src/socx/: __init__.py  __main__.py  _config.py  _meta.py  _uid.py  cli.py  config.py  console.py  converter.py  decorators.py  formatter.py  log.py  mixins.py  parser.py  reader.py  regression.py  test.py  tokenizer.py  validators.py  visitor.py  writer.py
src/socx/cli/: __init__.py  _cli.py  _params.py  _rich.py  cli.py
src/socx/config/: __init__.py  _config.py
src/socx/core/: __init__.py  _uid.py  mixins.py
src/socx/regression/: __init__.py  regression.py  status.py  test.py
src/socx/static/settings/: converter.toml  plugins.toml  regression.toml  settings.toml
src/socx/static/sql/: socx.sql
src/socx/static/toml/: convert.local.toml  convert.toml  filetypes.toml  plugins.toml  regression.toml  settings.toml  test.toml
src/socx_patches/: post_process_sim_log.py
src/socx_plugins/: config.py  example.py
src/socx_plugins/convert/: lst.py
src/socx_plugins/regression/: _cli.py  _opts.py  cli.py  rgr.py
tests/: test_console.py  test_uid.py
