# ------------------------------------------------------------------------------
# Project Configurations
# ------------------------------------------------------------------------------
[project.scripts]
covgen='covgen:covgen'

[project]
name = "covgen"
version = "0.1.0"
readme = "README.md"
authors = [ { name = "Sagi Kimhi", email = "sagi.kim5@gmail.com" } ]
maintainers = [ { name = "Sagi Kimhi", email = "sagi.kim5@gmail.com" } ]
description = "Convert .lst files to SystemVerilog covergroups and coverpoints."
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "rich-cli>=1.8.0",
    "python-dotenv[cli]>=1.0.1",
    "dynaconf>=3.2.7",
    "jinja2>=3.1.5",
    "flask>=3.1.0",
]

[dependency-groups]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "pyupgrade",
    "pydocstyle",
    "pycodestyle",
    "flake8-bugbear",
    "flake8-simplify",
]
experimental = [
    "bitstring>=4.3.0",
    "numpy>=2.2.2",
    "python-constraint>=1.4.0",
]

# ------------------------------------------------------------------------------
# Build System Configurations
# ------------------------------------------------------------------------------

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/covgen"]

# ------------------------------------------------------------------------------
# Developer Configurations
# ------------------------------------------------------------------------------

[tool.mypy]
files = [ "src" ]
python_version = "3.12"
pretty = true
strict = true
color_output = true
show_error_codes = true
warn_unreachable = true

